<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/solutionCv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/resultCv"
        android:layout_margin="2dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/solutionTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:textAlignment="textEnd"
                android:textColor="@color/text_output"
                android:textSize="42sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/resultCv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons_layout"
        android:layout_margin="2dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/resultTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/zero"
                android:textAlignment="textEnd"
                android:textColor="@color/text_output"
                android:textSize="64sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnClearAll"
                style="@style/PrimaryButtons"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="7dp"
                android:background="@drawable/circular_button"
                android:backgroundTint="#F4673B"
                android:text="@string/clear_all" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPercentage"
                style="@style/PrimaryButtons"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="7dp"
                android:background="@drawable/circular_button"
                android:text="@string/Percentage" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnBackspace"
                style="@style/PrimaryButtons"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="7dp"
                android:background="@drawable/circular_button"
                android:text="@string/backSpace" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDivide"
                style="@style/PrimaryButtons"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="7dp"
                android:background="@drawable/circular_button"
                android:text="@string/Divide" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnOne"
                style="@style/SecondaryButtons"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:background="@drawable/square_button"
                android:text="@string/one" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnTwo"
                style="@style/SecondaryButtons"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:background="@drawable/square_button"
                android:text="@string/two" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnThree"
                style="@style/SecondaryButtons"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:background="@drawable/square_button"
                android:text="@string/three" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMultiply"
                style="@style/PrimaryButtons"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="7dp"
                android:background="@drawable/circular_button"
                android:text="@string/multiply" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnFour"
                style="@style/SecondaryButtons"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:background="@drawable/square_button"
                android:text="@string/four" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnFive"
                style="@style/SecondaryButtons"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:background="@drawable/square_button"
                android:text="@string/five" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSix"
                style="@style/SecondaryButtons"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:background="@drawable/square_button"
                android:text="@string/six" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSubtract"
                style="@style/PrimaryButtons"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="7dp"
                android:background="@drawable/circular_button"
                android:text="@string/subtract" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSeven"
                style="@style/SecondaryButtons"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:background="@drawable/square_button"
                android:text="@string/seven" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEight"
                style="@style/SecondaryButtons"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:background="@drawable/square_button"
                android:text="@string/eight" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNine"
                style="@style/SecondaryButtons"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:background="@drawable/square_button"
                android:text="@string/nine" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAdd"
                style="@style/PrimaryButtons"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="7dp"
                android:background="@drawable/circular_button"
                android:text="@string/add" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDoubleZero"
                style="@style/SecondaryButtons"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:background="@drawable/square_button"
                android:text="@string/double_zero" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnZero"
                style="@style/SecondaryButtons"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:background="@drawable/square_button"
                android:text="@string/zero" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPoint"
                style="@style/SecondaryButtons"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:background="@drawable/square_button"
                android:text="@string/point" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEquals"
                style="@style/PrimaryButtons"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="7dp"
                android:background="@drawable/circular_button"
                android:backgroundTint="#F4673B"
                android:text="@string/equal" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>